# wasm2cretonne

./: .gitignore  Cargo.toml  README.md
filetests/: arith.wast  memory.wast
lib/wasm2cretonne/: Cargo.toml
lib/wasm2cretonne/src/: code_translator.rs  lib.rs  module_parser.rs  module_translator.rs  sections_parser.rs  sections_translator.rs  translation_utils.rs  translations.rs  wasm_reader.rs
lib/wasm2cretonne/src/runtime/: dummy.rs  mod.rs  runtime.rs  spec.rs  standalone.rs
lib/wasmruntime/: Cargo.toml
lib/wasmruntime/src/: execution.rs  lib.rs  standalone.rs
lib/wasmstandalone/: Cargo.toml
lib/wasmstandalone/src/: execution.rs  lib.rs  standalone.rs
src/: main.rs
